Added personal git link. Fixed 'reset' button style & positioning.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     
         <footer>
             <button>reset.</button>
-            <p>Pete Micsunescu</p>
+            <p><a href="https://github.com/peat-is-nete"> Pete Micsunescu </a></p>
         </footer> 
 
    
