Added 'reset' button SFX. Also, 'reset' button looks wayyy better.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     
         <footer>
-            <button>reset.</button>
+            <button>reset</button>
             <p><a href="https://github.com/peat-is-nete"> Pete Micsunescu </a></p>
         </footer> 
 
