--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tic. tac. toe.</title>
+    <title>tic tac toe</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
     <div class="status-bar">
-        <p> tic tac toe </p>
+        <p id="title"> tic tac toe </p>
     </div>
 
     <div class="square"> 
